[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/Sprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/wheel.gd" type="Script" id=2]
[ext_resource path="res://scene/wheelpivot.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.53983, 6.69899 )

[node name="wheel" type="RigidBody2D"]
rotation = 1.5708
collision_layer = 512
collision_mask = 512
mode = 2
gravity_scale = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="doubleclick" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="left" type="Position2D" parent="."]
position = Vector2( -130, 0 )

[node name="leftmiddle" type="Position2D" parent="."]
position = Vector2( -77, 0 )

[node name="right" type="Position2D" parent="."]
position = Vector2( 130, 0 )

[node name="rightmiddle" type="Position2D" parent="."]
position = Vector2( 77, 0 )

[node name="top" type="Position2D" parent="."]
position = Vector2( 0, -130 )

[node name="down" type="Position2D" parent="."]
position = Vector2( 0, 130 )

[node name="top-left" type="Position2D" parent="."]
position = Vector2( -77, 77 )

[node name="top-right" type="Position2D" parent="."]
position = Vector2( -77, -77 )

[node name="bottom-right" type="Position2D" parent="."]
position = Vector2( 77, -77 )

[node name="bottom-left" type="Position2D" parent="."]
position = Vector2( 77, 77 )

[node name="delay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="revert" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
__meta__ = {
"_editor_description_": "transform back to two wheel"
}

[node name="Sprite2" parent="." instance=ExtResource( 1 )]

[node name="wheelpivot" parent="." instance=ExtResource( 3 )]
script = null
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="doubleclick" to="." method="_on_doubleclick_timeout"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
[connection signal="timeout" from="revert" to="." method="_on_revert_timeout"]
